Mon Jan 28 10:11:13 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
        * tests/Bug_4086_Regression/Bug_4086_Regression.mpc:
        * tests/Bug_4086_Regression/Foo.idl:
        * tests/Bug_4086_Regression/Foo_exec.h:
        * tests/Bug_4086_Regression/Foo_exec.cpp:
        * tests/Bug_4086_Regression/descriptors/DeploymentPlan.cdp:
        * tests/Bug_4086_Regression/descriptors/run_test.pl:
        * tests/Bug_4086_Regression/descriptors/run_test_cdr.pl:
          New test for components with attributes as part of
          supported interfaces. Thanks to Jiang Wei
          <jiangwei_1976 at yahoo dot com dot cn> for reporting this and
          providing the patch and unit test

Mon Jan 21 08:16:41 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
          QueryCondition DDS tests are NDDS only

Thu Dec 27 09:19:07 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated in preparation of next release

Thu Dec 27 10:00:49 CET 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO version 1.1.7 released.

Sun Dec 23 11:44:31 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/IDL3_to_XMI/IDL3_TO_XMI.mpc:
          Fixed post install

Sat Dec 22 15:22:31 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Base/CIAO_Base.mpc:
          Fixed location of ciao tools

Thu Dec 20 13:55:46 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/IDL3_to_IDL2/IDL3_to_IDL2.mpc:
          Fixed post install

Thu Dec 20 07:13:50 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/taoidl3toxmidefaults.mpb:
          Updated location of tao_idl3_to_xmi

Wed Dec 19 14:44:43 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/taobaseidl3toidl2defaults.mpb:
        * docs/fm/CIAO.htm:
        * tests/IDL3_to_XMI/Bug_3607_Regression/run_test.pl: