@@ -1,0 +1,29 @@
+#ifndef FOO_IDL
+#define FOO_IDL
+
+#include <Components.idl>
+
+interface SetPoint
+{
+  void set(in double value);
+};
+
+interface Measurement
+{
+  double get();
+};
+
+porttype MCPort
+{
+  attribute double default_val;
+  uses SetPoint control;
+  uses Measurement meas;
+};
+
+component Foo
+{
+  mirrorport MCPort voltage;
+
+};
+
+#endif
